# bayanat-cli

./: .gitignore  INSTALLER_REDESIGN.md  README.md  install.sh  package.json  pyproject.toml
bayanat_cli/: main.py
bayanat_cli/utils/: version.py
