# pyproject.toml

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bayanat-cli"
version = "0.1.0"
description = "CLI tool for BayanÄt data management system"
authors = [{name = "SJAC", email = "tech@syriaaccountability.org"}]
dependencies = [
    "typer>=0.4.0,<1.0.0",
    "click>=8.0.0,<9.0.0"  # Optional, since Typer is built on Click
]

[project.urls]
Home = "https://bayanat.org"

[project.scripts]
bayanat = "bayanat_cli.main:main"
